EL-2649: Update the format on the Add/Change Third party details pages (#271)
* If applied:
- this updates the format on the Add/Change Third party details pages
- removes redundant translation text put in during merge conflicts

--- a/locales/en.json
+++ b/locales/en.json
@@ -221,27 +221,26 @@
       "thirdParty": {
         "pageTitleAdd": "Add a third party contact – {caseReference} – {serviceName} – GOV.UK",
         "pageH1Add": "Add a third party contact",
-        "pageTitleEdit": "Edit third party contact – {caseReference} – {serviceName} – GOV.UK",
-        "pageH1Edit": "Edit third party contact",
+        "pageTitleChange": "Change details about a third party – {caseReference} – {serviceName} – GOV.UK",
+        "pageH1Change": "Change details about a third party",
         "name": "Name",
         "emailAddress": "Email address",
-        "emailAddressH2": "Email address (optional)",
+        "emailAddressHeading": "Email address (optional)",
         "contactNumber": "Contact number",
-        "contactNumberH2": "Phone number (optional)",
+        "contactNumberHeading": "Phone number (optional)",
         "address": "Address",
-        "addressH2": "Address (optional)",
-        "addressHint": "Enter address",
-        "postcodeHint": "Enter postcode",
+        "addressHeading": "Address (optional)",
         "relationshipToClient": {
           "title": "Relationship to client",
           "titleH2": "Relationship to client (optional)",
-          "parentOrGuardian": "Parent or Guardian",
+          "parentOrGuardian": "Parent or guardian",
           "familyMemberOfFriend": "Family member of friend",
           "professional": "Professional",
           "legalAdvisor": "Legal adviser",
           "other": "Other"
         },
         "safeToCall": "Is the third party safe to call?",
+        "safeToCallHeading": "Is the third party safe to call? (optional)",
         "passphrase": {
           "title": "Passphrase",
           "titleH2": "Has the client set up a passphrase?",
