If applied, this add the basic structure for adding client support needs

--- a/locales/en.json
+++ b/locales/en.json
@@ -212,6 +212,10 @@
         "label": "Language"
       },
       "clientSupportNeeds": {
+        "pageTitleAdd": "Add a client support need – {caseReference} – {serviceName} – GOV.UK",
+        "pageH1Add": "Add a client support need",
+        "pageTitleChange": "Change client support needs – {caseReference} – {serviceName} – GOV.UK",
+        "pageH1Change": "Change client support needs",
         "britishSignLanguage": "British Sign Language (BSL)",
         "textRelay": "Relay UK (text relay)",
         "callbackPreference": "Callback preference",
