Validation & Update tests
If applied:
- this includes  the validation for adding client support data
- adds a test for add client support needs controller
- moves languages for component into it's own JSON file called by controller by passing it to `locals` bit of the controller response

--- a/locales/en.json
+++ b/locales/en.json
@@ -228,7 +228,13 @@
         "otherSupport": "Other support",
         "checkBoxHint": "Select all that apply",
         "notesTextAreaHint": "Enter client support need",
-        "languageHint": "Start typing to select the language"
+        "languageHint": "Start typing to select the language",
+        "validationError": {
+          "notEmpty": "Select a client support need or select 'Cancel'",
+          "notEmptyLanguage": "Select a language",
+          "notEmptyNotes": "Enter the client support need",
+          "notChanged": "Change the client support needs or select 'Cancel'"
+        }
       },
       "thirdParty": {
         "pageTitleAdd": "Add a third party contact – {caseReference} – {serviceName} – GOV.UK",
