--- a/locales/en.json
+++ b/locales/en.json
@@ -217,17 +217,38 @@
         "label": "Language"
       },
       "clientSupportNeeds": {
+        "addPage": {
+          "pageTitleAdd": "Add a client support need – {caseReference} – {serviceName} – GOV.UK",
+          "pageH1Add": "Add a client support need"
+        },
+        "changePage": {
+          "pageTitleChange": "Change client support needs – {caseReference} – {serviceName} – GOV.UK",
+          "pageH1Change": "Change client support needs"
+        },
         "britishSignLanguage": "British Sign Language (BSL)",
         "textRelay": "Relay UK (text relay)",
         "callbackPreference": "Callback preference",
         "language": "Language – needs interpreter",
-        "otherSupport": "Other support"
+        "otherSupport": "Other support",
+        "checkBoxHint": "Select all that apply",
+        "notesTextAreaHint": "Enter client support need",
+        "languageHint": "Start typing to select the language",
+        "validationError": {
+          "notEmpty": "Select a client support need or select 'Cancel'",
+          "notEmptyLanguage": "Select a language",
+          "notEmptyNotes": "Enter the client support need",
+          "notChanged": "Change the client support needs or select 'Cancel'"
+        }
       },
       "thirdParty": {
-        "pageTitleAdd": "Add a third party contact – {caseReference} – {serviceName} – GOV.UK",
-        "pageH1Add": "Add a third party contact",
-        "pageTitleChange": "Change details about a third party – {caseReference} – {serviceName} – GOV.UK",
-        "pageH1Change": "Change details about a third party",
+        "addPage": {
+          "pageTitleAdd": "Add a third party contact – {caseReference} – {serviceName} – GOV.UK",
+          "pageH1Add": "Add a third party contact"
+        },
+        "changePage": {
+          "pageTitleChange": "Change details about a third party – {caseReference} – {serviceName} – GOV.UK",
+          "pageH1Change": "Change details about a third party"
+        },
         "name": "Name",
         "emailAddress": "Email address",
         "emailAddressHeading": "Email address (optional)",
