--- a/locales/en.json
+++ b/locales/en.json
@@ -142,6 +142,12 @@
         "heading": "No results found",
         "body": "There are no results that match the search criteria"
       }
+    },
+    "login": {
+      "heading": "Sign in to Manage your civil cases",
+      "username": "Username",
+      "password": "Password",
+      "signInButton": "Sign in"
     }
   },
   "forms": {
@@ -290,6 +296,12 @@
     "search": {
       "validationError": {
         "notEmpty": "Enter some case details"
+      }
+    },
+    "login": {
+      "validationError": {
+        "usernameEmpty": "Username is required",
+        "passwordEmpty": "Password is required"
       }
     }
   },
