EL-2741: Update the Secrets and Variables stored in GitHub (#324)
* If applied, this removes redundant variables and adds back in CONTACT_EMAIL to `base.njk`

--- a/locales/en.json
+++ b/locales/en.json
@@ -36,7 +36,7 @@
   "components": {
     "phaseBanner": {
       "feedbackText": "This is a new service. Help us improve it and ",
-      "feedbackLinkTextHTML": "<a class='govuk-link' href='#'>give your feedback by email</a>."
+      "feedbackLinkTextHTML": "give your feedback by email"
     },
     "table": {
       "noData": "No data",
