feat: integrate CLA backend API for client details endpoint
- Add comprehensive client details API integration using live CLA endpoint
- Extract helper functions to reduce complexity (extractPhoneNumber, isSafeToCall)
- Add data transformation helpers (transformContactDetails, transformClientSupportNeeds, transformThirdParty)
- Implement postcode uppercase standardization for consistency
- Add translation support for third-party relationship types
- Add caseStatus field to ClientDetailsResponse interface
- Add capitaliseFirstLetter Nunjucks filter for language display
- Refactor apiService.ts to meet ESLint complexity requirements (complexity <10)
- Remove redundant spread operator to prevent data override issues
- Update client details partial to use translations and filters
- Add passphrase field to third party form
- Fix controller redirect paths for consistency

Technical improvements:
- Reduced transformClientDetailsItem complexity from ~18 to ~3 (83% reduction)
- Reduced apiService.ts from 703 to 639 lines (64 lines removed)
- All new helper functions properly typed and exported
- ESLint complexity and max-lines issues addressed

--- a/locales/en.json
+++ b/locales/en.json
@@ -17,6 +17,15 @@
       "opened": "Opened",
       "accepted": "Accepted",
       "closed": "Closed"
+    },
+    "values": {
+      "thirdPartyRelationship": {
+        "PARENT_GUARDIAN": "Parent or guardian",
+        "FAMILY_FRIEND": "Family member or friend",
+        "PROFESSIONAL": "Professional",
+        "LEGAL_ADVISOR": "Legal adviser",
+        "OTHER": "Other"
+      }
     }
   },
   "navigation": {
