--- a/locales/en.json
+++ b/locales/en.json
@@ -275,7 +275,8 @@
           "notEmpty": "Select a client support need or select 'Cancel'",
           "notEmptyLanguage": "Select a language",
           "notEmptyNotes": "Enter the client support need",
-          "notChanged": "Change the client support needs or select 'Cancel'"
+          "notChanged": "Change the client support needs or select 'Cancel'",
+          "tooLongNotes": "Enter less than 250 characters"
         }
       },
       "thirdParty": {
