If applied, this updates the selection for search drop down list.

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,9 +14,10 @@
     "errorSummaryTitle": "There is a problem",
     "status": {
       "new": "New",
-      "opened": "Opened",
-      "accepted": "Accepted",
-      "closed": "Closed"
+      "pending": "Pending",
+      "advising": "Advising",
+      "closed": "Closed",
+      "completed": "Completed"
     },
     "thirdPartyRelationship": {
       "text": {
