--- a/locales/en.json
+++ b/locales/en.json
@@ -19,6 +19,12 @@
       "closed": "Closed",
       "completed": "Completed"
     },
+    "outcomeCode": {
+      "MIS-OOS": "Client signposted to other help – not in scope",
+      "MIS": "Refer back to CLA helpline – not in scope",
+      "MIS-MEANS": "Means – not eligible",
+      "COI": "Conflict of interest"
+    },
     "thirdPartyRelationship": {
       "text": {
         "PARENT_GUARDIAN": "Parent or guardian",
@@ -126,11 +132,13 @@
         "clientSupportNeeds": "Client support needs"
       },
       "buttons": {
-        "acceptCase": "Accept case",
-        "rejectCase": "Reject case",
-        "splitCase": "Split case",
-        "closeCase": "Close case",
-        "leaveFeedback": "Leave feedback",
+        "label": "Change status",
+        "actions":{
+          "advising": "Advising",
+          "pending": "Pending",
+          "closed": "Closed",
+          "completed": "Completed"
+        },
         "generateLegalHelpForm": "Generate legal help form",
         "reopenCase": "Reopen case",
         "addThirdPartyContact": "Add third party contact",
