EL-2755/EL-2756/EL-2797/EL-2796: Adds functionality for state change (#380)
Imtiaz changes:
* Updates header and adds button menu
* Adds Banner for case details
* Adds functionality for advising and completed button
* Adds state notes to pending banner
* Adds missing state_note to the helper

* EL-2797-Adds interstitial page and functionality for reopen
* Adds Global header component
* Adds case details header to why-reopen page

* EL-2764 change state to closed inc. reason
* Changes route name from close to completed

* EL-2756 Adds functionality to change state to Pending
* fix linting issue with aync declaration
* Updates header and adds button menu
* Adds Banner for case details
* Adds state notes to pending banner
* Adds Global header component

Masum changes:
* If applied, 
- this adds styles, updates layouts and creates a new yarn lock file
- this fixes existing mocha unit tests
- this fixes existing playwright tests, to match the new UI
- this makes another api call so that we can show details on case info partial. This also updates the tests.
- this removes the duplication of where we get `transformClientDetailsItem` from
- add missing status to playwright helper.
- this removes the `eslint-disable-next-line complexity` comment from `closeCase` function
- this removes `eslint-disable-next-line complexity` by creating the `validCaseReference` function
- this updates based on review comments

---------

Co-authored-by: Sandy Ryalls <sandy.ryalls@justice.gov.uk>
Co-authored-by: Masum Khan <masum.khan@digital.justice.gov.uk>
Co-authored-by: MazOneTwoOne <76905544+MazOneTwoOne@users.noreply.github.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -155,6 +155,33 @@
         "pageTitle": "Remove client support needs? – {serviceName} – GOV.UK",
         "heading": "Remove client support needs?",
         "description": "This will permanently delete all information about the clients's support needs."
+      },
+      "reopenCase": {
+        "title": "Why is this case re-opened?",
+        "label": "Why is this case re-opened?",
+        "hint": "Add a note"
+      },
+      "closedCase": {
+        "title": "Why is this case closed?",
+        "legend": "Why is this case closed?",
+        "noteLabel": "Add a note",
+        "reasons": {
+          "misHint": "The case will be sent to the CLA helpline",
+          "coiHint": "The case will be sent to the CLA helpline"
+        }
+      },
+      "pendingCase": {
+        "title": "Why is this case pending?",
+        "legend": "Why is this case pending?",
+        "otherNoteLabel": "Enter why this case is pending",
+        "reasons": {
+          "notReady": "Not ready for determination",
+          "canNotContact": "Cannot contact client",
+          "thirdParty": "Third party authorisation",
+          "consentFromAnother": "Consent from another provider",
+          "requiresInterpreter": "Requires interpreter",
+          "other": "Other"
+        }
       }
     },
     "error": {
@@ -194,6 +221,35 @@
     }
   },
   "forms": {
+    "caseDetails": {
+      "reopenCase": {
+        "validationError": {
+          "notEmpty": "Enter why this case is re-opened",
+          "tooLong": "Note must be 5000 characters or less"
+        }
+      },
+      "closeCase": {
+        "validationError": {
+          "eventCode": {
+            "notEmpty": "Select why this case is closed"
+          },
+          "closeNote": {
+            "tooLong": "Note must be 5000 characters or less"
+          }
+        }
+      },
+      "pendingCase": {
+        "validationError": {
+          "pendingReason": {
+            "notEmpty": "Select why this case is pending"
+          },
+          "otherNote": {
+            "notEmpty": "Enter why this case is pending",
+            "tooLong": "Note must be 5000 characters or less"
+          }
+        }
+      }
+    },
     "clientDetails": {
       "name": {
         "label": "Name",
