EL-2809: View case history (#409)
* EL-2809: View case history

If applied:
- this adds a partial to the history tab
- adds more specific details to the history tab test and an MSW handler
- updates the outcome descriptions
- resolves linting error and creates re-usable function for getting pagination data
- doesn't show notes for when code is "MT_CHANGED" or "MT_CREATED"
- populates the mojTimeline based on the api call
- updates the nunjucks setup
- puts API call to fetch client details into middleware so, that it can be accessed in the request object
- It also moves the logic to transform pagination meta from template  to controller
- updates the tests

--- a/locales/en.json
+++ b/locales/en.json
@@ -20,10 +20,73 @@
       "completed": "Completed"
     },
     "outcomeCode": {
+      "CASE_CREATED": "Case created",
+      "CASE_VIEWED": "Case pending",
+      "CASE_ORGANISATION_SET": "Case organisation set",
+      "DIAGNOSIS_CREATED": "Diagnosis created",
+      "DIAGNOSIS_DELETED": "Diagnosis deleted",
+      "INCOMPLETE_DIAGNOSIS_DELETED": "Incomplete diagnosis deleted",
+      "MT_CREATED": "Means test created",
+      "MT_CHANGED": "Means test changed",
+      "MT_PASSED": "Means test passed",
+      "MT_FAILED": "Means test failed",
+      "CALL_STARTED": "Operator started call",
+      "CALLBACK_COMPLETE": "Callback complete",
+      "REF-INT_CREATED": "Split case created and referred internally",
+      "REF-EXT_CREATED": "Split case created and referred externally",
+      "COMPLAINT_CREATED": "Complaint created",
+      "OWNER_SET": "Complaint owner set",
+      "COMPLAINT_FLAG_TOGGLED": "Complaint flag toggled",
+      "COMPLAINT_NOTE": "Complaint note",
+      "COMPLAINT_REOPENED": "Complaint reopened",
+      "TRANSFERRED_TO_SPECIALIST": "Complaint transferred to specialist",
+      "HOLDING_LETTER_SENT": "Complaint holding letter sent",
+      "FULL_RESPONSE_SENT": "Complaint full response sent",
+      "COMPLAINT_CLOSED": "Complaint closed",
+      "COMPLAINT_VOID": "Complaint voided",
+      "CB1": "Callback 1",
+      "CB2": "Callback 2",
+      "CB3": "Callback 3",
+      "PCB": "Priority callback",
+      "CBC": "Callback cancelled",
+      "IRKB": "Assigned to alternative help from Knowledgebase",
+      "SPFM": "Assigned to F2F provider (Debt, Education and Discrimination)",
+      "SPFN": "Assigned to F2F provider (Housing and Family)",
+      "COSPF": "Assigned to F2F provider",
+      "EDFF": "Assigned to F2F provider (Education specialist providers not available)",
+      "INSUF": "Not enough info to continue",
+      "ABND": "Client abandoned call",
+      "TERM": "Hung up call",
+      "IRCB": "Booked appointment with senior member of staff",
+      "COPE": "Case opened in error",
+      "DUPL": "Duplicate of existing case",
+      "WROF": "Write off case - use only under senior instruction",
+      "RDSP": "Sent back to specialist",
+      "SAME": "Read out prior alternate help",
+      "REFDPA": "Refused DPA",
+      "RELBD": "Don't transfer / COI identifier",
+      "RSTR": "Restricted from service",
+      "NOLA": "No Legal Aid",
+      "MRCC": "Manager reviewed compliant case",
+      "MRNB": "Manager reviewed non-billable",
+      "CBSP": "Will call back later for specialist",
+      "DECL": "Client declined all help options",
+      "NRES": "No resources available to help",
+      "DESP": "Client declined specialist",
+      "REFSP": "Referred to specialist",
+      "MANALC": "Manually allocated by operator",
+      "MANREF": "Manually allocated to Specialist for course-correction",
+      "SPOR": "Operator recommends second opinion",
       "MIS-OOS": "Client signposted to other help – not in scope",
+      "MIS-MEANS": "Not financially eligible",
       "MIS": "Refer back to CLA helpline – not in scope",
-      "MIS-MEANS": "Means – not eligible",
-      "COI": "Conflict of interest"
+      "COI": "Conflict of interest",
+      "REOPEN": "Case re-opened",
+      "SPOP": "Advising on case",
+      "CLSP": "Case completed",
+      "DREFER": "Arranged an appointment with a F2F specialist",
+      "REF-INT": "Referred internally",
+      "REF-EXT": "Referred externally"
     },
     "thirdPartyRelationship": {
       "text": {
