If applied, this: - updates the client details tab controller - adds controller for case details tab - creates new partial for case details tab - updates the translation file

--- a/locales/en.json
+++ b/locales/en.json
@@ -187,6 +187,13 @@
         "financialEligibility": "Financial eligibility",
         "history": "History"
       },
+      "caseDetailsSection": {
+        "clientProblemTitle": "Client problem from check if you can get legal aid",
+        "operatorDiagnosisTitle": "Operator scope diagnosis",
+        "operatorNotesTitle": "Notes from operator",
+        "providerNotesTitle": "Notes from provider",
+        "noteLabel": "Add a note"
+      },
       "clientDetails": {
         "heading": "Client details",
         "aboutClient": "About the client",
