--- a/locales/en.json
+++ b/locales/en.json
@@ -257,11 +257,11 @@
         "intro": "You can search by:",
         "items": {
           "caseId": "case ID (eg. EH-1234-2925)",
+          "laaReference": "LAA reference, for example 3000435",
           "phoneNumber": "phone number",
           "name": "name",
           "postcode": "postcode",
-          "address": "address",
-          "laaReference": "LAA reference, for example 3000435"
+          "address": "address"
         }
       },
       "inputLabel": "Search by case ID, client name, phone number, postcode or address",
